--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "bujo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.12.1",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "prisma": "^5.12.1",
-    "tailwindcss": "^3.3.0"
-  }
+    "name": "bujo-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.12.1",
+        "next": "14.1.4",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.24.1",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.1.4",
+        "postcss": "^8",
+        "prisma": "^5.12.1",
+        "tailwindcss": "^3.3.0"
+    },
+    "prisma": {
+        "seed": "node prisma/seed.js"
+    }
 }
