Rename env.example for right syntax

--- a/bujo-app/.env.example
+++ b/bujo-app/.env.example
@@ -2,5 +2,5 @@
 
 //Developers remember to update this when needed.
 
-// DATABASE_URL =
-//     "postgresql://-USERNAME:PASSWORD@localhost:PORTNUMBER/DATABASE?schema=public";
+DATABASE_URL =
+     "postgresql://-USERNAME:PASSWORD@localhost:PORTNUMBER/DATABASE?schema=public";
