--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "bujo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
-  }
+    "name": "bujo-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "flowbite-react": "^0.8.0",
+        "lucide": "^0.368.0",
+        "next": "14.1.4",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-icons": "^5.1.0"
+    },
+    "devDependencies": {
+        "@next/eslint-plugin-next": "^14.2.1",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.4",
+        "eslint-config-prettier": "^9.1.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.3"
+    }
 }
