--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -9,10 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@prisma/client": "^5.12.1",
         "flowbite-react": "^0.8.0",
         "lucide": "^0.368.0",
-        "@prisma/client": "^5.12.1",
-        "next": "14.1.4",
+        "next": "^14.2.1",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.1.0"
