--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -10,18 +10,23 @@
     },
     "dependencies": {
         "@prisma/client": "^5.12.1",
-        "next": "14.1.4",
+        "flowbite-react": "^0.8.0",
+        "lucide": "^0.368.0",
+        "next": "^14.2.1",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-icons": "^5.1.0"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.24.1",
-        "autoprefixer": "^10.0.1",
+        "@next/eslint-plugin-next": "^14.2.1",
+        "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.4",
+        "eslint-config-prettier": "^9.1.0",
         "postcss": "^8",
         "prisma": "^5.12.1",
-        "tailwindcss": "^3.3.0"
+        "tailwindcss": "^3.4.3"
     },
     "prisma": {
         "seed": "node prisma/seed.js"
