--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -15,6 +15,7 @@
         "next": "^14.2.1",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
         "react-icons": "^5.1.0"
     },
     "devDependencies": {
