--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@prisma/client": "^5.12.1",
         "flowbite-react": "^0.8.0",
+        "iron-session": "^8.0.1",
         "lucide": "^0.368.0",
         "next": "^14.2.1",
         "react": "^18",
