--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.12.1",
+        "bcrypt": "^5.1.1",
         "flowbite-react": "^0.8.0",
         "iron-session": "^8.0.1",
         "lucide": "^0.368.0",
