Implemen iron session to login

--- a/bujo-app/.env.example
+++ b/bujo-app/.env.example
@@ -3,3 +3,4 @@
 //Developers remember to update this when needed.
 
 DATABASE_URL ="postgresql://-USERNAME:PASSWORD@localhost:PORTNUMBER/DATABASE?schema=public"
+SECRET_COOKIE_PASSWORD="complex_password_at_least_32_characters_long"
