--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -6,8 +6,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "vitest"
     },
+    "type": "module",
     "dependencies": {
         "@prisma/client": "^5.12.1",
         "bcrypt": "^5.1.1",
@@ -24,13 +26,17 @@
     "devDependencies": {
         "@babel/eslint-parser": "^7.24.1",
         "@next/eslint-plugin-next": "^14.2.1",
+        "@testing-library/react": "^15.0.7",
+        "@vitejs/plugin-react": "^4.3.0",
         "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.4",
         "eslint-config-prettier": "^9.1.0",
+        "jsdom": "^24.1.0",
         "postcss": "^8",
         "prisma": "^5.12.1",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "vitest": "^1.6.0"
     },
     "prisma": {
         "seed": "node prisma/seed.js"
