--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -9,7 +9,6 @@
         "lint": "next lint",
         "test": "vitest"
     },
-    "type": "module",
     "dependencies": {
         "@prisma/client": "^5.12.1",
         "bcrypt": "^5.1.1",
@@ -26,6 +25,7 @@
     "devDependencies": {
         "@babel/eslint-parser": "^7.24.1",
         "@next/eslint-plugin-next": "^14.2.1",
+        "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@vitejs/plugin-react": "^4.3.0",
         "autoprefixer": "^10.4.19",
