--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -17,6 +17,7 @@
         "iron-session": "^8.0.1",
         "lucide": "^0.368.0",
         "next": "^14.2.1",
+        "path": "^0.12.7",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
