--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "@prisma/client": "^5.12.1",
+        "@testing-library/user-event": "^14.5.2",
         "bcrypt": "^5.1.1",
         "check-password-strength": "^2.0.10",
         "flowbite-react": "^0.8.0",
         "iron-session": "^8.0.1",
         "lucide": "^0.368.0",
         "next": "^14.2.3",
+        "node-mocks-http": "^1.14.1",
         "path": "^0.12.7",
         "react": "^18",
         "react-dom": "^18",
