--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -6,16 +6,20 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "vitest"
     },
     "dependencies": {
         "@prisma/client": "^5.12.1",
+        "@testing-library/user-event": "^14.5.2",
         "bcrypt": "^5.1.1",
         "check-password-strength": "^2.0.10",
         "flowbite-react": "^0.8.0",
         "iron-session": "^8.0.1",
         "lucide": "^0.368.0",
         "next": "^14.2.3",
+        "node-mocks-http": "^1.14.1",
+        "path": "^0.12.7",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.3",
@@ -24,13 +28,18 @@
     "devDependencies": {
         "@babel/eslint-parser": "^7.24.1",
         "@next/eslint-plugin-next": "^14.2.1",
+        "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/react": "^15.0.7",
+        "@vitejs/plugin-react": "^4.3.0",
         "autoprefixer": "^10.4.19",
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.4",
         "eslint-config-prettier": "^9.1.0",
+        "jsdom": "^24.1.0",
         "postcss": "^8",
         "prisma": "^5.12.1",
-        "tailwindcss": "^3.4.3"
+        "tailwindcss": "^3.4.3",
+        "vitest": "^1.6.0"
     },
     "prisma": {
         "seed": "node prisma/seed.js"
