--- a/bujo-app/package.json
+++ b/bujo-app/package.json
@@ -16,6 +16,7 @@
         "check-password-strength": "^2.0.10",
         "flowbite-react": "^0.8.0",
         "iron-session": "^8.0.1",
+        "jest": "^29.7.0",
         "lucide": "^0.368.0",
         "next": "^14.2.3",
         "node-mocks-http": "^1.14.1",
